# ems_vue_tauri

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/https/: async_routes.rs  mod.rs  refresh_token.rs  users.rs
src/api/: routes.ts  user.ts
src/layout/components/lay-navbar/: index.vue
src/layout/components/lay-notice/: data.ts
src/router/: utils.ts
src/router/modules/: error.ts  home.ts
src/utils/: tauri.ts
src/utils/http/: index.ts
src/views/login/: index.vue
src/views/welcome/: index.vue
types/: global.d.ts  router.d.ts
